--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,12 @@ repositories {
 
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.3.11'
+    compile  'org.springframework.boot:spring-boot-starter-parent:1.2.0.RELEASE'
+    compile  'org.springframework.boot:spring-boot-starter-web:1.2.0.RELEASE'
+    compile  'org.springframework.boot:spring-boot-starter-jersey:1.2.0.RELEASE'
+    testCompile 'org.springframework.boot:spring-boot-starter-test:1.2.0.RELEASE'
+    testCompile 'org.assertj:assertj-core:1.7.0'
+    testCompile 'org.mockito:mockito-all:1.10.8'
+    testCompile 'io.rest-assured:rest-assured:3.0.0'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
